@@ -27,18 +27,22 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.graalvm.home.HomeFinder;
 import org.graalvm.options.OptionValues;
 
+import com.oracle.truffle.api.CompilerDirectives;
+import com.oracle.truffle.api.CompilerDirectives.TruffleBoundary;
 import com.oracle.truffle.api.TruffleLanguage;
+import com.oracle.truffle.api.interop.InteropLibrary;
 import com.oracle.truffle.api.interop.TruffleObject;
+import com.oracle.truffle.api.interop.UnsupportedMessageException;
 import com.oracle.truffle.espresso.EspressoLanguage;
 import com.oracle.truffle.espresso.EspressoOptions;
 import com.oracle.truffle.espresso.ffi.NativeAccess;
 import com.oracle.truffle.espresso.ffi.NativeSignature;
 import com.oracle.truffle.espresso.ffi.Pointer;
+import com.oracle.truffle.espresso.ffi.SignatureCallNode;
 import com.oracle.truffle.espresso.meta.EspressoError;
 import com.oracle.truffle.espresso.runtime.EspressoProperties;
 import com.oracle.truffle.espresso.substitutions.Collect;
@@ -46,12 +50,60 @@ import com.oracle.truffle.espresso.substitutions.Collect;
 public final class NFISulongNativeAccess extends NFINativeAccess {
 
     @Override
-    protected String nfiStringSignature(NativeSignature nativeSignature, boolean fromJava) {
-        String res = super.nfiStringSignature(nativeSignature, fromJava);
-        if (fromJava) {
+    protected String nfiStringSignature(NativeSignature nativeSignature, boolean forFallbackSymbol) {
+        String res = super.nfiStringSignature(nativeSignature, forFallbackSymbol);
+        if (!forFallbackSymbol) {
             return "with llvm " + res;
         }
         return res;
+    }
+
+    @Override
+    public boolean hasFallbackSymbols() {
+        return true;
+    }
+
+    @TruffleBoundary
+    private static boolean isSulongSymbolClass(Object symbolClass) {
+        return "LLVMLanguage".equals(((Class<?>) symbolClass).getSimpleName());
+    }
+
+    @Override
+    public boolean isFallbackSymbol(TruffleObject symbol) {
+        return isFallbackSymbol(symbol, InteropLibrary.getUncached());
+    }
+
+    private NFINativeAccess fallback;
+
+    @Override
+    public NativeAccess getFallbackAccess() {
+        if (fallback == null) {
+            // races are benign
+            fallback = new NFINativeAccess(env);
+        }
+        return fallback;
+    }
+
+    static boolean isFallbackSymbol(TruffleObject symbol, InteropLibrary interop) {
+        Object symbolClass = getSymbolClass(symbol, interop);
+        return symbolClass == null || !isSulongSymbolClass(symbolClass);
+    }
+
+    private static Object getSymbolClass(TruffleObject symbol, InteropLibrary interop) {
+        if (!interop.hasLanguage(symbol)) {
+            return null;
+        }
+        try {
+            return interop.getLanguage(symbol);
+        } catch (UnsupportedMessageException e) {
+            CompilerDirectives.transferToInterpreterAndInvalidate();
+            throw EspressoError.shouldNotReachHere(e);
+        }
+    }
+
+    @Override
+    public SignatureCallNode createSignatureCall(NativeSignature nativeSignature) {
+        return NFISulongSignatureCallNode.create(this, nativeSignature);
     }
 
     NFISulongNativeAccess(TruffleLanguage.Env env) {
@@ -103,14 +155,10 @@ public final class NFISulongNativeAccess extends NFINativeAccess {
      * version. First checks the 'default' folder, as it matches the Java version of the parent
      * GraalVM. Then checks remaining folders under llvmRoot.
      */
-    private Path legacyGraalvmllvmBootLibraryPath(String javaVersion, Path llvmRoot) {
+    private static Path legacyGraalvmllvmBootLibraryPath(String javaVersion, Path llvmRoot) {
         // Try $ESPRESSO_HOME/lib/llvm/default first.
         Path llvmDefault = llvmRoot.resolve("default");
-        if (!Files.exists(llvmDefault)) {
-            getLogger().warning(() -> "espresso-llvm (default) component not found. Install it, if available for your platform.");
-        }
         String llvmDefaultVersion = getJavaVersion(llvmDefault);
-        getLogger().fine(() -> "Check " + llvmDefault + " with Java version: " + llvmDefaultVersion);
         if (javaVersion.equals(llvmDefaultVersion)) {
             return llvmDefault;
         }
@@ -123,20 +171,20 @@ public final class NFISulongNativeAccess extends NFINativeAccess {
             return null; // no folders with Java libraries + embedded LLVM-bitcode.
         }
 
-        List<Path> sortedPaths = null;
-        try {
+        List<Path> sortedPaths;
+        try (var stream = Files.list(llvmRoot)) {
             // Order must be deterministic.
-            sortedPaths = Files.list(llvmRoot) //
+            sortedPaths = stream //
                             .filter(f -> !llvmDefault.equals(f) && Files.isDirectory(f)) //
                             .sorted() //
-                            .collect(Collectors.toList());
+                            .toList();
         } catch (IOException e) {
             throw EspressoError.shouldNotReachHere(e.getMessage(), e);
         }
 
         for (Path llvmImpl : sortedPaths) {
             String llvmImplVersion = getJavaVersion(llvmImpl);
-            getLogger().fine(() -> "Checking " + llvmImpl + " with Java version: " + llvmImplVersion);
+            LOGGER.fine(() -> "Checking " + llvmImpl + " with Java version: " + llvmImplVersion);
             if (javaVersion.equals(llvmImplVersion)) {
                 return llvmImpl;
             }
@@ -155,18 +203,18 @@ public final class NFISulongNativeAccess extends NFINativeAccess {
     @Override
     public void updateEspressoProperties(EspressoProperties.Builder builder, OptionValues options) {
         if (options.hasBeenSet(EspressoOptions.BootLibraryPath)) {
-            getLogger().info("--java.BootLibraryPath was set by the user, skipping override for " + Provider.ID);
+            LOGGER.info("--java.BootLibraryPath was set by the user, skipping override for " + Provider.ID);
         } else {
             String targetJavaVersion = getJavaVersion(builder.javaHome());
             if (targetJavaVersion == null) {
-                getLogger().warning("Cannot determine the Java version for '" + builder.javaHome() + "'. The default --java.BootLibraryPath will be used.");
+                LOGGER.warning("Cannot determine the Java version for '" + builder.javaHome() + "'. The default --java.BootLibraryPath will be used.");
             } else {
                 Path espressoHome = HomeFinder.getInstance().getLanguageHomes().get(EspressoLanguage.ID);
                 if (espressoHome != null && Files.isDirectory(espressoHome)) {
                     Path llvmRoot = espressoHome.resolve("lib").resolve("llvm");
                     Path llvmBootLibraryPath = legacyGraalvmllvmBootLibraryPath(targetJavaVersion, llvmRoot);
                     if (llvmBootLibraryPath == null) {
-                        getLogger().warning("Couldn't find libraries with LLVM bitcode for Java version '" + targetJavaVersion + "'. The default --java.BootLibraryPath will be used.");
+                        LOGGER.warning("Couldn't find libraries with LLVM bitcode for Java version '" + targetJavaVersion + "'. The default --java.BootLibraryPath will be used.");
                     } else {
                         builder.bootLibraryPath(Collections.singletonList(llvmBootLibraryPath));
                     }
@@ -175,7 +223,7 @@ public final class NFISulongNativeAccess extends NFINativeAccess {
                     if (Files.isDirectory(llvmRoot)) {
                         builder.bootLibraryPath(Collections.singletonList(llvmRoot));
                     } else {
-                        getLogger().warning("Couldn't find libraries with LLVM bitcode. The default --java.BootLibraryPath will be used.");
+                        LOGGER.warning("Couldn't find libraries with LLVM bitcode. The default --java.BootLibraryPath will be used.");
                     }
                 }
             }
@@ -187,7 +235,7 @@ public final class NFISulongNativeAccess extends NFINativeAccess {
          * file system.
          */
         if (options.hasBeenSet(EspressoOptions.JVMLibraryPath)) {
-            getLogger().info("--java.JVMLibraryPath was set by the user, skipping override for " + Provider.ID);
+            LOGGER.info("--java.JVMLibraryPath was set by the user, skipping override for " + Provider.ID);
         } else {
             builder.jvmLibraryPath(Collections.singletonList(builder.espressoLibs()));
         }
